--- a/_posts/thesis_chapters/2025-6-5-Design_v13.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v13.md
@@ -93,9 +93,9 @@ Toby, a child participant, has been working independently on his emerging platfo
 
 INSERT SHORTER TABLE OF ACTIVITY
 
-In the longer vignette, Toby undertakes two key actions: refining his level layout and adding a new gameplay design pattern. These required him to navigate multiple tools [^2]. He did so in a fluid, self-directed way. The sections that follow explore how such individual actions were scaffolded and how they contributed to the evolving activity system.
+Table 5.1 - A shorter extract of Vignette 1 focusing on an overview of the use of tools.
 
-To frame the scene within the broader analytic structure of the thesis, the following diagrams represent the layered activity systems in which this vignette is situated.
+In the longer vignette, Toby undertakes two key actions: refining his level layout and adding a new gameplay design pattern. These required him to navigate multiple tools [^2]. He did so in a fluid, self-directed way. The sections that follow explore how such individual actions were scaffolded and how they contributed to the evolving activity system. To frame the scene within the broader analytic structure of the thesis, the following diagrams represent the activity systems in which this vignette is situated.
 
 ![Figure.5.carrot - Final showcase activity in Brooks Building with home made cabinet surrounding a laptop computer.](./Pictures/carroteater3.jpg){width=90%}
 
@@ -108,11 +108,15 @@ Using a 3GAT lens, the component parts of this shared activity system are repres
 ![Figure 5.full - Activity system 1 - an emerging community of novice game makers creating games as a learning experience](./Pictures/At_dia_1_v5.png){width=95%}
 
 
-A 3GAT interpretation reveals the object of activity as a complex, multi-faceted construct, encompassing digital, physical and conceptual elements. It includes the use of software tools to develop code and assets, physical computers for coding, and the varied motivations of participants. These motivations, particularly social and playful, became quickly evident as the session progressed. Interaction with the task and with others shaped both individual and group experiences. In Phase 1 (P1), the object expanded to include the development of collaborative processes. These changes, and their role in building shared understanding, are explored later in the chapter.
+A 3GAT interpretation reveals the object of activity as a complex construct, encompassing digital, physical and conceptual elements. It includes the use of software tools to develop code and assets, physical computers for coding, and the varied motivations of participants. These motivations, particularly social and playful, became quickly evident as the session progressed. Interaction with the task and with others shaped both individual and group experiences. In Phase 1 (P1), the object expanded to include the development of collaborative processes. These changes, and their role in building shared understanding, are explored later in the chapter.
 
-As the design progressed, it became useful to analyse smaller units of activity. Following Barab and colleagues [@barab_using_2002], who justify the analysis of nested systems in technology-rich environments, I treat the implementation of GDPs as activity systems in their own right (see Figure.5.feature below). At this level, the subject might be an individual or a parent-child pair working to modify a specific feature within their game. One advantage of this scale is the ability to closely examine the mediating role of tools and the shifts in object of activity that arise from contradiction. By analysing these game design pattern implementations as distinct activity systems, it is possible to trace how the changes made at the individual level feed back into the broader community practices, influencing both the technical and social aspects of the learning environment.
+As the design progressed, it became useful to analyse smaller units of activity. Following Barab and colleagues [@barab_using_2002], who justify the analysis of nested systems in technology-rich environments, I treat the implementation of GDPs as activity systems in their own right. At this level, the subject might be an individual or a parent-child pair working to modify a specific feature within their game. One advantage of this scale is the ability to closely examine the mediating role of tools and the shifts in object of activity that arise from contradiction. By analysing these game design pattern implementations as distinct activity systems, it is possible to trace how the changes made at the individual level feed back into the broader community practices, influencing both the technical and social aspects of the learning environment.
 
-![Figure 5.feature - Mid-level activity system of game making: constructing a game feature by feature](./Pictures/At_dia_2_v3.png){width=95%}
+I HAVE DROPED THE IMAGE - I DESCRIBED IN MUCH MORE DETAILS IN THE CHAPTER - I SHOULD STATE HOW I DO THIS AS SIGNPOSTING -
+
+<!-- DROP THIS IMAGE - IT IS DESCRIBED IN MUCH MORE DETAILS IN THE CHAPTER.
+
+![Figure 5.feature - Mid-level activity system of game making: constructing a game feature by feature](./Pictures/At_dia_2_v3.png){width=95%} -->
 
 The significance of activity at this scope underpins my proposal of GDPs as a germ cell concept within the theoretical framework of the thesis. At this level, the object of activity is more concrete. Participants are focused on implementing or adapting a design pattern in their own game. This allows for analytical clarity and supports the argument that GDPs served not only as pedagogical scaffolds but also as conceptual anchors for the intervention's iterative development.
 
@@ -161,6 +165,8 @@ When participants began engaging with code, several tensions quickly surfaced. T
 
 
 The use of professional text-code language and framework, driven by  rather than a block coding approach created additional tensions. While simplified, the structure of the starting template was still relatively complex at first glance and offered no easy way into experimentation as advocated by a tinkering or bricolage approach [^br]. Many learners had ambitious ideas for their projects including that were beyond realistic scope of the novice programme [^ab]. Regarding peer learning, while some learners became aware of each other's programming work, it was difficult to adapt the bespoke code additions from one project to another.
+
+
 
 
 ![Figure 5.x: Representation of emerging areas of contradictions in mid-P1 game making process](./Pictures/At_tension_1_v3.png){width=75%}
@@ -244,9 +250,14 @@ A BIT MOE OF A SUMMARY.. -->
 In P1 my overall aim was to explore the process and to encourage personal creativity using a diversity of tools. The process of selecting a reduced toolset in P2 helped address potential overload and fracturing of experience, thus reducing the possibility for peer exchange of skills and knowledge.
 
 The template design is an example of a “half-baked” games [@kynigos_children_2018], and aligns broadly with the UMC framework [@lee_computational_2011].
+
+THIS SHOULD BE COVERED BY LATER DISCUSSION - COMPRESS & SIGNPOST
+
 In particular, the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. My approach, through a careful scaffolding of initial coding experiences, forced a rapid and early transition from the _use_ to _modify_ stages, the motivation being to address possible negative affect towards text-based coding.
 
 The use of a template aligned with half-baked game/microworld approach [@kynigos_children_2018] helped by introducing hands on use of coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities, a tension explored in a later section [^5].
+
+<!-- FOOTNOTE SIGNPOSTS CH.6 - ADD AS TENSION IN TABLE TOO? -->
 
 While my design aim was in part to reduce coding syntax errors and thus reduce learner anxiety, I did not wish not to remove the possibility of learners making mistakes entirely. While even these small changes involved potential syntax errors, as these simple expressions were surrounded by other lines modelling the correct syntax, they could often be corrected by the participants without facilitator support [^6].
 
@@ -354,11 +365,19 @@ Table 5.x Categorisation of game design patterns used in P4.
 These elements were themed in a way which aligned with the MDA (mechanics, dynamics, and aesthetics) game element framework explored in Chapter 2 [^11].  
 
 
-<!-- NOTE - DEVELOP THIS A BIT AS IT IS EXPLORED IN CHAPTER 6. -->
+NOTE - DEVELOP THIS A BIT AS IT IS EXPLORED IN CHAPTER 6. CHANGE GRAPHIC TO A TABLE IN CH.6 - AND REVISIT IT'S PLACE IN THE OVERALL ARGUMENT.
+
 
 #### Brief analysis
 
-The structuring of the collection of code examples, as outlined in were developed in response to requests for new features from participants, aligning with a shared motivation to encourage diverse learner pathways. Video data collected documents the creation of games with diverse and complex styles and themes [^11a]. These issues are discussed in more detail in relation to the development of participant agency in Chapter 7. Discussion on how the development of these supporting resources interacted with the core template contributes to research on Microworld environments and the UMC framework is continued in the final dicussion section of this chapter.
+SIGNPOSTING SENTENCE?
+
+The structuring of the collection of code examples, as outlined in were developed in response to requests for new features from participants, aligning with a shared motivation to encourage diverse learner pathways. This process is discussed in more detail in relation to the development of participant agency in Chapter 7.
+
+Video data collected documents the creation of games with diverse and complex styles and themes [^11a]. Observations on the impact of the choice driven structuring of documentation based on a guiding principle of game design patterns are covered in Chapter 6.
+
+Discussion on how the development of these supporting resources interacted with the core template contributes to research on structural frameworks to support computing education is continued in the final discussion section of this chapter.
+
 
 <!-- While the code snippets, practical instructions, and chapters on core principles continued to pose some challenges (as seen in Vignette 6.1),
 the video data analysed in the following chapter shows an increase in participants’ practical ability to implement game features.  -->
@@ -368,7 +387,7 @@ the video data analysed in the following chapter shows an increase in participan
 
 #### Description of what happened
 
-At times in the interventions, in line with existing research [^12], some participants experienced alienation from the process of coding. This section explores this process through the lens of a key transition in Phase 1.  Early in Phase 1, I had incorporated several non-coding techniques to foster positive affect and create an inclusive idioculture. These included: playing and analysing retro arcade and console games, drama games as session warm ups, a process drama [^13], sketching pixel art on paper, digital pixel art creation, loosely structured ideation sessions to decide on themes, and sessions on music making and audio effects creation using accessible tools. While this wide diversity of activities was later streamlined for later phases [^14], the initial impact of these more accessible creative on the general culture of the group appeared positive in line with existing research [kafai][peppler].  
+At times in the interventions, in line with existing research [^12], some participants experienced alienation from the process of coding. This section explores this process through the lens of a key transition in Phase 1.  Early in Phase 1, I had incorporated several non-coding techniques to foster positive affect and create an inclusive idioculture. These included: playing and analysing retro arcade and console games, drama games as session warm ups, a process drama [^13], sketching pixel art on paper, digital pixel art creation, loosely structured ideation sessions to decide on themes, and sessions on music making and audio effects creation using accessible tools. While this wide diversity of activities was later streamlined for later phases [^14], the initial impact of these more accessible creative on the general culture of the group appeared positive in line with existing research [^14b].  
 
 <!-- MOVEDEarly sessions included playing and discussing retro arcade games, analysing their components, brainstorming game story scenarios, creating pixel-art characters on paper, and making craft collages representing game levels. These multimodal and low-tech activities helped surface ideas, supported collaborative group dynamics, and eased participants into the creative space without the pressure of unfamiliar digital tools. -->
 
@@ -455,7 +474,12 @@ Therefore, while this section has shown the importance of cultural factors in th
 
 This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process. The contradictions explored initially focused on technical and then more social dimensions of the learning design, a process which has surfaced some of the barriers to achieving the varied competencies needed to complete the text coding of a multi-media project.
 
-The section begins with a table which begins a process of synthesis of design factors. The subsequent discussion explores features of the design narrative and the summative table section synthesises aspects of systemic contradictions and highlights how elements of the design process contribute to the research landscape,  specifically UMC, half-baked approach and constructionist design principles.
+This discussion explores features of the design narrative and the summative table section synthesises aspects of systemic contradictions and highlights how elements of the design process contribute to the research landscape, specifically:
+
+- UMC, half-baked approach and constructionist design principles
+- stage based approach, as a guiding pedagogy
+
+ The section ends with a table which begins a process of synthesis of design factors.
 
 <!-- - alignment with UMC, and other pedagogies (retrospectively found),
   - authenticity and blackboxing in particular as a constructionist approach
@@ -469,7 +493,9 @@ Table 5.2 above shows a summary of some of the tensions and design resolutions t
 
 INSERT TABLE OF THE DESIGN FACTORS.
 
-Table 5.2
+Table 5.2- Table of emerging tensions and design responses
+
+NOTE -  Table of learning dimensions - IS MENTIONED IN TABLE BUT covered in Chapter 6 - so signpost
 
 At this point it is useful to describe a process here briefly  in relation to the three contradictions explored above [^17]. The evolution of these tools and documentation outlined in C1 and C2  was driven by a need to increase in instrumental agency due to the novice status of participants. As instrumental proficiency increased for some participants it allowed the development of peer learning and other social coding processes to emerge as described in C3.  
 
@@ -524,6 +550,8 @@ ADDITION MADIHA's reflection in interview data.
 
 A possible drawback of using a professional tool for novice learners is the risk of culture shock when participants encounter the unfamiliar and potentially alienating aspects of a professional coding ecosystem. The learning design outlined in this chapter helps address at least the beginning of this process by providing a protective, scaffolded learning environment.
 
+#### A staged based approach structured around a germ cell concept of GDPs
+
 In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a stage-based approach which introduces code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task. The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation.
 
 
@@ -538,6 +566,10 @@ This stepped approach which increases complexity of the objective of activity, i
 This work differs in a core template is provided allowing for less instruction following and the progression does not involve starting from scratch each time. This is notable as I found in P1 that changes to the underlying code structure were stressful and unwelcome for learners one had built familiarity with it  [^20].
 
 In line with UMC, an advanced stage of the stage based approach would be the choice to imagine, design and implement a GDP not included in the menu provided, a process that Dan and Toby take on in P3 (see Vignette 7).
+
+### Summary table and metaphorical conceptual model
+
+
 
 #### Harbour metaphor
 
@@ -635,10 +667,12 @@ Gilbert is the worsted name.
 
 [^11a]: Evidence of this diversity is present in Chapter 6 and in the Vignette data in Appendix.V.
 
-[^12]: Research by Kafai, Burke and Peppler in particular on varied approaches to address alienation to coding games has been explored in Chapter 2.
+[^12]: The introduction gave an outline of cultural barriers to CGD&P.
+
 
 [^13]: A process drama is a drama activity which engages participants in a scenario in which they engage with a wider activity in role. The process drama of Phase one is explored in Appendix X.
 
+[^14b]: Research  particular on varied approaches to address alienation to coding games has been explored in Chapters 1 and 2. In particular see the work of by Kafai, Burke and Peppler [@kafai_constructionist_2015; @peppler_gaming_2009-1].
 
 [^14]: The immediate tension that the diverse tool set brought was in how much time playing with such a diverse set of non-coding practices took. In addition the greater diversity reduced the possibility or at least the fluency of peer learning that happened in later phases.
 
