--- a/_posts/thesis_chapters/2025-6-5-Design_v13.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v13.md
@@ -274,10 +274,9 @@ Groups expanded their activity by creating wish lists of game features, which ac
 
 ADD IN A TIMELINE -
 
-By the start of P2 while the new structural template was in place, the supporting documenation was still evolving.
+By the start of P2 while the new structural template was in place, the supporting documentation was still evolving.
 
-MOVE
-In response, I developed several new artefacts intended to scaffold project navigation and reduce the bottleneck of real-time technical support.
+
 
 <!--
 CHECK BACK FOR DUPLICATION
@@ -293,9 +292,12 @@ I struggled reconcile a responsive approach to providing support and documentati
 
 Together, these challenges surfaced a contradiction between the object of the activity (learner-led game creation) and the evolving rules and mediating artefacts intended to support that process. The activity system lacked a shared, structured way for participants to orient themselves in the process to develop or to reuse successful code patterns without the input of facilitator mediation. The flexibility of the environment became a source of friction.
 
-This contradiction appeared to be a double bind [@Engeström], how could I introduce greater support via documentation detailing implementation and a underlying principles without compromising the responsiveness to the learner pathways that was foundational to the ethos of my approach?
+This contradiction appeared to be a double bind [@Engeström], how could I provide greater support via documentation detailing implementation and a underlying principles without compromising the responsiveness to the learner pathways that was foundational to the ethos of my approach? This contradiction drove extensive revision in the learning design.
 
 #### Design response
+
+<!-- INTERGRATE?
+In response, I developed several new artefacts intended to scaffold project navigation and reduce the bottleneck of real-time technical support. -->
 
 Recalling my organisational crisis in P1 outlined in the section above, in response to my email asking for help, parents made suggestions including: use of a visible and shared list of game features that are being worked on, and documentation to support the implementation their requirements. The suggestion of the list of game features used as both an shared organisational tool, became relevant in addressing the contradiction outlined above.
 
@@ -319,12 +321,13 @@ VERY LIMITED ANALYSIS HERE - SIGNPOST LATER EXPLORATION?
 
 ##### Structuring instructional tutorial resources and code snippets
 
-MAKER CLEARER
+MAKE CLEARER
 
+While quick start cards scaffolded existing affordances within the game code, an innovative structure of documentation and support to add new features were need to address the contradiction outlines above. This section deals with the introduction of code snippets and self-contained instruction based on game design patterns, and their containment within a manual with a more linear structure.
 
-In P1, I had encouraged participants to use code snippets from the Phaser documentation website. While the use of code examples or *snippets* is a common professional practice in problem-solving [@yang_stack_2017], their use by novice learners presents challenges related to relevance, consistency, and accessibility [@treude_understanding_2017]. Indeed  difficulties experienced by participants in P1 understanding and applying these abstracted examples prompted me to create more tailored resources. To do this I created stand-alone code project that illustrated requested game features as gameplay design patterns, such as *jumping on an enemy to zap it* and *making a moving enemy*  demonstrated a code feature or principle through a playable game project based on the core game template, hosted in an online code playground. This allowed participants to copy and paste the relevant code sections needed into their project.  I developed this approach further in a way which reduced dependence on my time as a facilitator. I wrote supporting documentation in a step by step format for each code example.
+While the use of code examples or *snippets* [^csn] is a common professional practice in problem-solving [@yang_stack_2017], their use by novice learners presents challenges related to relevance, consistency, and accessibility [@treude_understanding_2017].  Indeed  difficulties experienced by participants in P1 understanding and applying these  abstracted code snippets from the Phaser documentation website prompted me to create more tailored resources for P2. To do this I created stand-alone code projects that illustrated requested game features as gameplay design patterns; including: *jumping on an enemy to zap it*, and *making a moving enemy*. These project demonstrated annotated code features and within a playable game project based on the starter game template, allowing participants to copy and paste the relevant code sections needed into their project.  
 
-In the early stages of P2, learners accessed these document through  a Google document with links and brief descriptions. I continued developing new projects and producing printable instructions to support these code snippets, ensuring that each snippet linked to a descriptive chapter and vice versa. To help learners situate the code within the correct structure, all projects used the core game template and included only the new code required for each feature.
+To reduced dependence on my time as a facilitator, I wrote supporting documentation in a step by step format for each code example. In the early stages of P2, learners accessed these document through  a Google document with links and brief descriptions. I continued developing new projects and producing printable instructions to support these code snippets, ensuring that each snippet linked to a descriptive chapter and vice versa. To help learners situate the code within the correct structure, all projects used the core game template and included only the new code required for each feature.
 
 To meet participants' requests for foundational coding knowledge, I created step-by-step chapter resources guiding users to code a core game template structure from first principles [^9]. While this linear format did not fully align with my choice-driven approach, I envisioned it as supplementary reinforcement for learning outside of sessions, which indeed some participants did take up [^10]. Writing these chapters revealed a technique that helped balance structured guidance with choice-driven learning.
 
@@ -646,6 +649,8 @@ Gilbert is the worsted name.
 [^qs]: The time limitations one-off events at Mozilla conference (for technology educators), Feral Vector (for grass-roots game developers), and Manchester Libraries (local families) and for trainee computing teachers  helped me distil the essence of the affordances into an accelerated process of getting started with the design process.
 
 [^8]: A version of the quick start cards is available as part of Appendix.tech.
+
+[^csn]: Code snippets and their co-location within code playground tools are explained in Chapter 2. In short they are code examples extracted from context in a way designed to facilitate reuse and often shared online as a community resource.
 
 [^9]: See opening chapters of https://3m.flossmanuals.net/
 
