--- a/_posts/thesis_chapters/2025-6-5-Design_v13.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v13.md
@@ -379,23 +379,27 @@ At times in the interventions, in line with existing research [^12], some partic
 
 Some participants experienced a sense of exclusion from the culture of the group during the transition from these initial activities to coding: a process now illustrated using a case study of one family. The family consisted of Anastasia, the mother, and her two daughters, one at the lower end of our 8-12 age range and one at the upper end. Members of this family actively participated in non-coding activities, tensions emerged when the introduced coding framework was introduced and the limitations became clearer. The framework of a two dimensional game did not support a key gameplay idea that the younger child had imagined in the previous ideation stage: specifically a exploring a three dimensional landscape from the point of view of a bee avatar [^15]. This realisation was very upsetting to the child and required extensive negotiation with Anastasia leading and myself contributing to a process of explaining the limitations of our beginners coding course.  At a later stage of Phase 1 the whole family experienced alienation. As the phase had progressed, an organic division of labour had occurred with some members sticking with graphical and audio asset creation and others working on incorporating these assets and ideas into the code framework. As session progressed there was progressively less for the non-coders to do. During participant feedback, Anastasia shared that in one session they had arrived a little late, and after observing other participants around them immersed in problem solving using text code tools, felt like they were surrounded by a process of _hardcore coding_ (participants phrase) that felt disconnected from.
 
-This experience was not isolated with this family.  In interview data parent Maggie noted that "I was worried we (her and other son John) neglected Toby" in relations to this stage where smaller clusters of the group grappled with code implementation of graphical, audio elements and other design element created by the wider group. In addition, in my journal, I noted that group work at this stage felt disjointed with non-coders left with little to do  and a feeling that the previously playful culture was transforming into something more serious.
+As participants moved from early-stage ideation, and asset creation, the flexible, diverse, and decentralised working practices gave way to a narrower set of expected competencies.  This experience was not isolated with this family.  In interview data parent Maggie noted that "I was worried we (her and other son John) neglected Toby" in relations to this stage where smaller clusters of the group grappled with code implementation of graphical, audio elements and other design element created by the wider group.
 
-
+In my journal, I noted that group work at this stage felt disjointed with non-coders left with little to do  and a feeling that the previously playful culture was transforming into something more serious. I reflected on the fragility of learners’ positive affect and the possibility of alienation during the transition from the planning and sketching phase to the coding phase.
 
 <!-- Finally, it highlighted a potential imbalance in facilitator attention, as participants more confident in coding sometimes created complex problems requiring significant time, which could leave others feeling less supported or valued. -->
 
 #### Surfaced tensions and framed contradiction
 
-These reflections show the fragility of learners’ positive affect and the possibility of alienation during the transition from the planning and sketching phase to the coding phase. They exemplify a contradiction between the object of the activity, inclusive game-making allowing diverse creative contributions, and the cultural layer of activity [@engestrom_activity_1999]. Inherent tensions within this contradiction include the emerging norms requiring a close engagement with the technical aspects of coding and a shift in division of labour prioritising these aspects. Exclusion from the dominant cultural dimensions of  activity, framed by the term “hardcore coding”  became an entrenched area of of contradiction, despite a learning environment which included diverse and inclusive elements informed by previous research. As participants moved from early-stage ideation, and asset creation, the flexible, diverse, and decentralised working practices gave way to a narrower set of expected competencies. To participate fully, some individuals would need to engage with text-based code regardless of their preferred working style and given that coding activities were on going by others attempts to incorporate these team members at this stage would be disruptive to those existing divisions of labour.    
+These reflection show two strands of tension between activity system elements.  
+One tension is between the object of working together and the emerging norms requiring a close engagement with the technical aspects of coding and a shift in division of labour prioritising these aspects.
 
-The accumulated contradiction is illustrated in Figure 5.x.
+Another tension concerned division of labour. To participate fully in later design stages, participants would need to engage with text-based code regardless of their previous (and perhaps preferred) working practices.  In addition,  given that coding activities were on going by others attempts to incorporate these team members at this stage would be disruptive to those existing divisions of labour.
+
+These tensions combined with previously explored cultural barriers to coding to explose a contradiction between the object of the activity, inclusive game-making allowing diverse creative contributions, and the cultural layer of activity [@engestrom_activity_1999]. The accumulated contradiction is illustrated in Figure 5.x.
 
 ![](./Pictures/At_tension_2_v2.png){width=95%}
 
 Fig 5.x – A contradiction between subject experience and the evolving involving cultural layer of the game-making activity - CHANGE TO A CONTRADICTION BETWEEN DOL AND SUBJECT
 
-This conflict represents a double bind which is while particular to this phase of the research has broader implications. The process of introducing accessible non-coding activities serves to help acculturation to game making, but if text coding is required later, this only delays potential alienation, and potentially heightens frustration if participants have invested into a process which they are later alienated from.  Addressing these tensions required rethinking not only the technical scaffolds, as outline above, but also the broader cultural framing of participation to accommodate the contributions involving visual design, sound production, and narrative development in an an on-going fashion.
+
+The contradiction and subsequent feeling of alienation occurred despite a learning environment which included diverse and inclusive elements informed by previous research. The process of introducing accessible non-coding activities served to help acculturation to game making process in general, but as text coding was required later, the process only delayed alienation for some participants. Indeed, the process potentially heightens frustration if participants have invested into a process which they are later alienated from.  As such, addressing this contradiction required rethinking not only the technical scaffolds, as outline above, but also the broader cultural framing of participation to accommodate the contributions involving visual design, sound production, and narrative development in an on-going fashion, and a process to involve all participants in coding earlier on.
 
 <!-- Although issues of mediation of technical tools played a role in this disengagement, this section has tensions address cultural dimensions.  The shift in the object of activity, from playful design to more technical production, exposed a misalignment between participants' creative goals and the community norms forming around coding. -->
 
@@ -403,23 +407,28 @@ This conflict represents a double bind which is while particular to this phase o
 <!-- A's family displayed the internal manifestations of this contradiction externally during the game making sessions and later during participant feedback [add footnote?]. -->
 <!-- The coding tool and the template mediated the activity in ways that introduced new community norms, contributing to a cultural tension between the inclusive intentions of the design and the exclusive signals sent by the technical tools. This contradiction reflects a misalignment within the activity system between the tools, division of labour, and object, resulting in alienation for some participants.  -->
 
-
-
 #### Design response
 
-As part of feedback, the parent expressed a preference for more hands-on exploration with the tools of production before being required to make creative decisions, driving the design decisions outlined in C1 above.  EXPLORED EARLIER
-
-The following design interventions were introduced in Phases 2 and 3 to respond to these tensions. While originally developed to address practical and technical barriers, these strategies also served to realign cultural dimensions of the activity system, supporting more inclusive and flexible forms of participation.
-
-##### Social coding processes
+The responses outlined in C1 and C2 above concerning software tools and documentation addressed some aspects of this contradiction. For examples, in P1 feedback, the parent Anastasia suggested more hands-on exploration with the tools of production before being required to make creative decisions [^apb].
 
 As previously outlined, the introduction of a half-baked game template in Phase 2 allowed participants to work with a functioning starter game, which could be modified with minimal code changes. This significantly reduced early technical demands and opened up more varied points of entry into the activity. This change had a notable impact on the division of labour from Phase 2 onwards. Participants were increasingly able to work either individually or in small groups, often alongside family members. This helped to reduce the kind of role-based exclusions seen in the case described above, where non-coding contributions became marginalised as the process continued.
 
 In addition, the structuring of resources around an episodic process of applying one GDP after another, shifted the pattern of the design process away from a design-build-test progression in a way which allowed for more ongoing balance between coding and non-coding activities.
 
+The following design interventions were introduced in P2 and P3 to respond to these tensions via these strategies also served to realign cultural dimensions of the activity system, supporting more inclusive and flexible forms of participation.
+
+##### Social coding processes via playtesting
+
+
 WHERE ELSE IS PLAYTESTING COVERED? HOW TO LINK - CONCEPTS OF FLOW AND ENGAGEMENT
 
-The provision of a working base project also increased the time participants spent playtesting both their own and others’ games. Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 6.1), and these moments became triggers for collaboration. In response, I prioritised timely support to ensure games remained functional and playable. By the middle of P2, playtesting had evolved into a key site of peer exchange, prompting spontaneous sharing of advice, assets, and fixes. Observing this, I recognised the potential of these interactions and, in preparation for P3, began to intervene more gently and strategically to nurture these emergent practices of social coding and mutual aid.
+The structural changes of starting template meant that players starting with a game in a working state. Thus if changes were carried out in small iterations each change could be self-tested and shared with others via group / social playtesting. This increased the time participants spent playtesting both their own and others’ games dramatically. The process of playtesting became increasingly significant in P2 in a way which transcended an instrumental design process of revision. It took on important social and cultural value.
+
+Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 6.1), and these moments became triggers for collaboration. In response, I prioritised timely support to ensure games remained functional and playable.
+
+SIGNPOST MRE IN CH.6?
+
+By the middle of P2, playtesting had evolved into a key site of peer exchange, prompting spontaneous sharing of advice, assets, and fixes. Observing this, I recognised the potential of these interactions and, in preparation for P3, began to intervene more gently and strategically to nurture these emergent practices of social coding and mutual aid.
 
 
 ##### Use of side missions to encourage varied creative practices
@@ -669,8 +678,10 @@ Gilbert is the worsted name.
 
 [^14]: The immediate tension that the diverse tool set brought was in how much time playing with such a diverse set of non-coding practices took. In addition the greater diversity reduced the possibility or at least the fluency of peer learning that happened in later phases.
 
+
 [^15]: More detail of the engagement and disengagement of Anastasia's family is described in the case study Appendix 5.bee,
 
+[^apb]: Fuller feedback is described in the Appendix 5.bee
 
 [^16]: A design summary which links to downloadable, and adaptable resources is available as an open educational resources is included as Appendix.resources and is available online here.
 
